Corrected whiskey link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <strong>Testing</strong>:
     </p>
     <ul>
-      <li><a href="https://github.com/felixge/node-mysql">github.com/felixge/node-mysql</a></li>
+      <li><a href="https://github.com/cloudkick/whiskey">github.com/cloudkick/whiskey</a></li>
       <li>npm: <em>whiskey</em></li>
     </ul>
 
